# sqlgenerator

./: .gitignore  README.md  extract_schema.py  mcp_sql_server.py  project_plan.md  pyproject.toml  schema.md  sentry_prompt.md  test_db.py  uv_setup_guide.md
.github/: copilot-instructions.md
tests/: test_chart.py  test_cte.py  test_sentry.py  test_sentry_full.py
